tests/fail/07_uninitialized.lang
// ОЖИДАЕТСЯ ОШИБКА: ожидалась обязательная инициализация переменной
функция Начало() : целое {
    целое х;
    вернуть 0;
}
